# sentinel

./: .env.ci  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: .env.example  celerybeat-schedule  conftest.py  pytest.ini
app/core/: celery.py  settings.py  urls.py
app/domains/: api.py  models.py  schemas.py  tests.py
app/domains/migrations/: 0001_initial.py  0002_alter_domain_options.py
app/monitoring/: api.py  models.py  schemas.py  services.py  tasks.py
app/monitoring/migrations/: 0001_initial.py  0002_alter_pingresult_latency_ms_and_more.py
docker/django/: Dockerfile  entrypoint.sh  start-prod.sh  start.sh
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile.prod  default.conf  nginx.prod.conf
landing/: 404.html  index.html
