[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "Distributed Synthetic Monitoring System"
authors = ["Omar Y. Alvarado <omarjesith@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
django-ninja = "^1.0"
psycopg = "^3.1"
celery = "^5.3"
redis = "^5.0"
httpx = "^0.27"
python-decouple = "^3.8"
django-ninja-extra = "*"
django-ninja-jwt = "*"
gunicorn = "^21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
black = "^24.1"
isort = "^5.13"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
